Set PYTHONPATH in CI workflow to include src directory

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,5 +25,7 @@ jobs:
         pip install -r requirements.txt
 
     - name: Run Unit Tests
+      env:
+        PYTHONPATH: ./src
       run: |
         pytest
