Add bulk run/experimentation step to CI workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,3 +29,9 @@ jobs:
         PYTHONPATH: ./src
       run: |
         pytest
+
+    - name: Run Bulk Test
+      env:
+        PYTHONPATH: ${{ github.workspace }}/src
+      run: |
+        python tests/bulk_test_chatbot.py
