--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,9 @@ on:
   pull_request:
     branches:
       - main
-
+  push:
+    branches:
+      - main
 jobs:
   build:
 
@@ -24,6 +26,10 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
+    - name: Check Code Standards
+      run: |
+        flake8 src tests    
+
     - name: Run Unit Tests
       env:
         PYTHONPATH: ./src
@@ -35,3 +41,10 @@ jobs:
         PYTHONPATH: ${{ github.workspace }}/src
       run: |
         python tests/bulk_test_chatbot.py
+    
+    - name: Upload Test Results
+      if: always()
+      uses: actions/upload-artifact@v2
+      with:
+        name: test-results
+        path: reports/
