--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,11 +30,11 @@ jobs:
       run: |
         flake8 src tests    
 
-    - name: Run Unit Tests
+    - name: Run Unit Tests with Coverage
       env:
-        PYTHONPATH: ./src
+        PYTHONPATH: ${{ github.workspace }}/src
       run: |
-        pytest
+        pytest --cov=src --cov-report=xml --cov-report=html
 
     - name: Run Bulk Test
       env:
@@ -48,3 +48,10 @@ jobs:
       with:
         name: test-results
         path: reports/
+
+    - name: Upload Coverage Report
+      if: always()
+      uses: actions/upload-artifact@v2
+      with:
+        name: coverage-report
+        path: htmlcov/
