--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,3 +55,12 @@ jobs:
       with:
         name: coverage-report
         path: htmlcov/
+    
+    - name: Deploy to Test Environment
+      run: |
+        docker-compose -f docker-compose.yml -f docker-compose.test.yml up --build -d
+  
+    - name: Run Tests in Test Environment
+      run: |
+        docker-compose -f docker-compose.yml -f docker-compose.test.yml run test
+
