--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -7,5 +7,5 @@ services:
       - "5000:5000"
     volumes:
       - .:/usr/src/app
-    environment:
-      - OPENAI_API_KEY=${OPENAI_API_KEY}
+    env_file:
+      - .env.dev
