--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -1,8 +1,8 @@
 version: '3.8'
 
 services:
-  test:
+  app:
     build: .
-    environment:
-      - OPENAI_API_KEY=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
+    env_file:
+      - .env.test
     command: pytest --cov=src --cov-report=xml --cov-report=html
