--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -8,8 +8,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    env:
-      ENV_FILE: .env.dev
+    environment: DEV
 
     steps:
     - name: Checkout code
@@ -37,8 +36,7 @@ jobs:
   test:
     needs: build
     runs-on: ubuntu-latest
-    env:
-      ENV_FILE: .env.test
+    environment: TEST
 
     steps:
     - name: Checkout code
@@ -60,18 +58,21 @@ jobs:
         sudo chmod +x /usr/local/bin/docker-compose
 
     - name: Deploy to Test Environment
+      env:
+        OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
       run: |
         docker-compose -f docker-compose.yml -f docker-compose.test.yml up --build -d
 
     - name: Run Tests in Test Environment
+      env:
+        OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
       run: |
         docker-compose -f docker-compose.yml -f docker-compose.test.yml run app
 
   deploy:
     needs: test
     runs-on: ubuntu-latest
-    env:
-      ENV_FILE: .env.prod
+    environment: PROD
 
     steps:
     - name: Checkout code
