--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,27 @@
-openai
-azure-identity
-azure-mgmt-resource
-azureml-core
-flask
-pytest
-python-dotenv
-flake8
-pytest-cov
-black
+# Basic dependencies
+pandas>=1.3.0
+numpy>=1.21.0
+scikit-learn>=0.24.0
+
+# Evidently dependencies
+evidently>=0.1.46
+
+# Azure dependencies
+azure-storage-blob>=12.8.0
+azure-identity>=1.7.0
+azure-mgmt-resource>=19.0.0
+azureml-core>=1.34.0
+
+# OpenAI dependency
+openai>=0.27.0
+
+# Flask dependency
+flask>=2.0.0
+
+# Additional dependencies
+pytest>=6.2.4
+python-dotenv>=0.20.0
+flake8>=3.9.2
+pytest-cov>=2.12.1
+black>=21.7b0
+unittest-xml-reporting>=3.0.4
